--- a/web-module-project-lifecycle/src/App.css
+++ b/web-module-project-lifecycle/src/App.css
@@ -1,38 +1,56 @@
-.App {
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 62.5%;
+  background-color: #E7E0C9;
+}
+
+h1 {
   text-align: center;
+  font-size: 4rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+  text-align: center;
+  font-size: 2.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h3 {
+  font-size: 2rem;
+  color: #E7E0C9;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+p {
+  font-size: 1.25rem;
+  color: #E7E0C9;
+}
+
+a {
+  text-decoration: none;
+  font-size: 1.25rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+a:hover {
+  color: #E7E0C9;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* My User Card styles */
+
+.my-card{
+  margin: auto;
+  width: 95%;
+  border-radius: 8px;
+  background-color: #11324D;
+  display: flex;
+  align-items: flex-start;
+}
+
+.my-av img {
+ border-radius: 5px;
+ margin: 2% 2%;
+ width: 400px;
+}
+
+.my-info {
+  margin-left: 2%;
 }
